# serie

./: Cargo.toml
docs/src/features/: user-command.md
src/: app.rs  external.rs  git.rs  lib.rs  main.rs  protocol.rs  widget.rs
src/widget/: comment_detail.rs  commit_detail.rs
xcode/: .gitignore  .swiftformat  Makefile  README.md  build.sh
xcode/.github/workflows/: rust.yml
xcode/rustylib/: Cargo.toml
xcode/rustylib/src/: lib.rs  rustylib.swift  rustylibFFI.h  rustylibFFI.modulemap
xcode/swiftyapp/Lib/swiftyrustlib/: Package.swift
xcode/swiftyapp/swiftyapp/: ContentView.swift  SerieAppModel.swift  swiftyappApp.swift
