[package]
name = "serie"
version = "0.4.2"
description = "A rich git commit graph in your terminal, like magic"
authors = ["Kyosuke Fujimoto <kyoro.f@gmail.com>"]
homepage = "https://github.com/lusingander/serie"
repository = "https://github.com/lusingander/serie"
readme = "README.md"
license = "MIT"
keywords = ["git", "cli", "tui", "terminal"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.79.0"

exclude = ["/.github", "/img"]

[dependencies]
arboard = "3.4.1"
async-trait = "0.1"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = "0.6.3"
console = "0.15.10"
dirs = "5.0.1"
futures = "0.3.30"
fxhash = "0.2.1"
git2 = { version = "0.19.0" }
image = "0.25.5"
laurier = "0.1.0"
libp2p = { version = "0.54.1", features = [ "tokio", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux", "identify", "ping", "rendezvous", "rsa"] }
ratatui = "0.29.0"
rayon = "1.10.0"
reqwest = "0.12.12"
semver = "1.0.24"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
smart-default = "0.7.1"
time = { version = "0.1.39" }
tokio = { version = "1.38", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt", "json"] }
tui-input = "0.11.1"
tui-tree-widget = "0.23.0"
umbra = "0.3.0"
xdg = "2.5.2"

[dev-dependencies]
dircpy = "0.3.19"
rstest = "0.24.0"
tempfile = "3.15.0"
text-to-png = "0.2.0"
