[package]
name = "rustylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "rustylib"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
serie = { version = "0.8.0", path = "../.." }
uniffi = { version = "0.28.0", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.28.0", features = [ "build" ] }
